# Mython

./: CMakeLists.txt  README.md  lexer.cpp  lexer.h  main.cpp  parse.cpp  runtime.cpp  runtime.h
examples/: input.txt  output.txt
tests/: lexer_test.cpp  main_test.cpp  parse_test.cpp  runtime_test.cpp  statement_test.cpp
